# ADG-knowledge

./: .env.example  BRD_Quan_tri_kho_tri_thuc_Marketing_NotebookLM_FULL.docx  pyproject.toml
backend/: .env.example  README.md  pyproject.toml
backend/adg_kms_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  config.py  database.py  main.py  schemas.py
backend/app/models/: __init__.py  document.py  golden_answer.py
backend/app/routers/: chat.py  documents.py  golden_answers.py  stats.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Library.tsx  Upload.tsx  index.ts
src/: __init__.py
src/integrations/: __init__.py
src/models/: __init__.py
src/repositories/: __init__.py
src/services/: __init__.py
src/utils/: __init__.py
tests/: __init__.py
